--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,6 @@ body{
 	margin:0;
 }
 
-.infoGame{
-	background-color: white;
-	position:absolute;
-	padding:10px;
-	font-weight: bold;
-	font-size:20px;
-	opacity:0.5;
-	width:95%;
-}
 .cronometro{
 	left:0px;
 	float:left;
@@ -44,50 +35,12 @@ body{
 	position:absolute;
 }
 
-.container{
-	display: none;
+.darken-background{
 	width:100%;
 	height:100%;
 	background-color: black;
 	opacity:0.8;
 	position:absolute;
+	top:0;
 }
 
-.info{
-	display: none;
-	width:33%;
-	height:80%;
-	background-color: white;
-	opacity:1.0;
-	margin-left:33%;
-	margin-top: 5%;
-	position:absolute;
-	text-align: center;
-}
-
-.info ul{
-	list-style-type: none;
-	margin:0;
-	margin-top:5%;
-	padding: 0;
-}
-
-.info li{
-	margin:0;
-	padding:10px;
-	font-weight: bold;
-	font-size:20px;
-}
-
-.info li:hover{
-	text-decoration: underline;
-	cursor:pointer;
-}
-
-#perdeste{
-	display:none;
-}
-
-#ganhaste{
-	display:none;
-}
