--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-body{
-	margin:0;
-}
+body {
+  margin: 0; }
 
 body, #root, .App {
-	margin: 0;
-	overflow: hidden; }
+  margin: 0;
+  overflow: hidden; }
