Add controls component. Skin game status and menu components. Add material-ui and flex-mixin.

--- a/src/App/Menu/Menu.scss
+++ b/src/App/Menu/Menu.scss
@@ -1,3 +1,9 @@
+@import 'sass/shared.scss';
+
+.menu-container{
+	@include popup-container();
+}
+
 .info{
     margin:auto;
     background-color: white;
