--- a/src/App/GameStatus/GameStatus.scss
+++ b/src/App/GameStatus/GameStatus.scss
@@ -1,31 +1,15 @@
-.infoGame {
-    background-color: white;
+@import 'sass/shared.scss';
+.game-status-container {
+    background-color: rgba(0,0,0,0.7);
+    color: white;
     position: absolute;
     top: 0;
     padding: 10px;
     font-weight: bold;
-    font-size: 20px;
-    opacity: 0.5;
-}
-
-.controls ul {
-    list-style-type: none;
-    display: inline;
-}
-
-.controls li {
-    list-style-type: none;
-    display: inline;
-}
-
-.controls {
-    text-align: center;
-    float: left;
-    width: 80%;
-}
-
-.cronometro {
-    left: 0px;
-    float: left;
-    width: 10%;
+    font-size: 1rem;
+    width: 100%;
+    &>div {
+        float: left;
+        margin: 0px 20px;
+    }
 }
