--- a/src/App/Menu/Menu.scss
+++ b/src/App/Menu/Menu.scss
@@ -1,39 +1,15 @@
 @import 'sass/shared.scss';
 
-.menu-container{
-	@include popup-container();
-}
-
 .info{
-    margin:auto;
-    background-color: white;
-	text-align: center;
-}
-
-.info ul{
-	list-style-type: none;
-	margin:0;
-	margin-top:5%;
-	padding: 0;
-}
-
-.info li{
-	margin:0;
-	padding:10px;
-	font-weight: bold;
-	font-size:20px;
-}
-
-.info li:hover{
-	text-decoration: underline;
-	cursor:pointer;
-}
-
-.darken-background{
-	width:100%;
-	height:100%;
-	background-color: black;
-	opacity:0.8;
-	position:absolute;
-	top:0;
+	ul{
+		list-style-type: none;
+		margin:0;
+		padding: 0;
+	}
+	li{
+		margin:0;
+		padding:10px;
+		font-size:20px;
+	}
+	
 }
