--- a/src/App/InfoOptions/InfoOptions.scss
+++ b/src/App/InfoOptions/InfoOptions.scss
@@ -1,5 +1,5 @@
 @import 'sass/shared.scss';
-.game-status-container {
+#info-options {
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     position: absolute;
@@ -28,5 +28,7 @@
             height:1.1rem;
         }
     }
+
+
 
 }
