Use controls description exposed by games

--- a/src/App/Controls/Controls.scss
+++ b/src/App/Controls/Controls.scss
@@ -1,7 +1,15 @@
 #controls-content {
+
+    padding:15px;
+
     ul {
         list-style-type: none;
         padding: 0;
         margin: 0;
+
+        li{
+            list-style: none;
+        }
+
     }
 }
